# calaos_base

./: .env  .gitignore  .travis.yml  AGENTS.md  AUTHORS  BUGS.md  ChangeLog  Dockerfile  Makefile.am  Makefile.in  README  README.md  TODO  autogen.sh  config.h.in  configure  configure.ac  indent-all.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  build_dev.yml  build_release.yml  docker-publish-dev.yml  docker-publish.yml  main.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
build_doc/en/: io_doc.json
build_doc/fr/: io_doc.md
data/: Makefile.am  Makefile.in  debug.html
data/debug/: .jshintrc  Gruntfile.js  Makefile.am  README.md  bower.json  gulpfile.js  package-lock.json  package.json
data/themes/: Makefile.am  Makefile.in
data/themes/default/: Makefile.am  Makefile.in  calaos_theme.edc
data/themes/default/elm/: elm_actionbutton.edc  elm_button.edc  elm_calendar.edc  elm_ctxpopup.edc  elm_entry_keyboard.edc  elm_gengrid_item_config.edc  elm_genlist_item_browser_album.edc  elm_genlist_item_group_room.edc  elm_genlist_item_internalbool.edc  elm_genlist_item_internalint.edc  elm_genlist_item_internalstring.edc  elm_genlist_item_playlist.edc  elm_genlist_item_scenario.edc  elm_genlist_item_scenario_schedule.edc  elm_genlist_item_simple.edc  elm_genlist_item_wianalog.edc  elm_genlist_item_witemp.edc  elm_genlist_item_woanalog.edc  elm_genlist_item_wodali.edc  elm_genlist_item_wodalirvb.edc  elm_genlist_item_wodigital.edc  elm_genlist_item_wovolet.edc  elm_genlist_item_wovoletsmart.edc  elm_genlist_widget.edc  elm_list_base.edc  elm_list_home_room.edc  elm_list_homeboard.edc  elm_pager.edc  elm_slider_knob.edc  elm_spinner.edc
data/themes/default/structure/: activity_header_footer.edc  activity_loading.edc  amplifier_control.edc  button_action_macro.edc  button_square_macro.edc  circular_spinner.edc  element_scenario_home.edc  icons.edc  images.edc  keyboard_macros.edc  macro_config_tab.edc  macro_menu_button.edc  macro_round_button.edc  main_layout.edc  main_menu.edc  old_macros.edc  page_audio_list.edc  page_camera.edc  page_config_clock_panel.edc  page_config_panel.edc  page_config_password_panel.edc  page_config_screensaver_panel.edc  page_edit_scenario.edc  page_home.edc  page_keyboard.edc  page_media.edc  page_scenarios.edc  page_schedule.edc  page_web.edc  page_widgets.edc  paging_view.edc  player.edc  player_prog.edc  popup_actions_pages.edc  room_macro.edc  room_prog_macro.edc  rooms.edc  screen_suspend.edc  scrolling_text.edc  slider.edc  (+6 more)
data/themes/widgets/clock/: Makefile.am  icon.edc  images.edc  main.edc  widget_clock.edc  widget_clock_needle.edc  widget_clock_prog.edc
data/themes/widgets/note/: Makefile.am  icon.edc  main.edc
debian/: README.txt  calaos-home.install  calaos-server.default  calaos-server.init  calaos-server.install  calaos-server.postinst  calaos-server.postrm  calaos-server.service  changelog  control  dirs  rules
doc/: 00_overview.md  01_core_data_model.md  02_io_drivers.md  03_rules_engine.md  04_scenarios.md  05_audio.md  06_ipcam.md  07_remoteui.md  08_http_api.md  09_lua_scripting.md  10_events_notifications.md  11_config_persistence.md  12_extern_proc.md  13_utility_lib.md  14_python_extern_proc.md  15_mcp_server.md  README.md
m4/: ax_cxx_compile_stdcxx_11.m4  calaos.m4  efl_check_funcs.m4  efl_compiler.m4
po/: LINGUAS  Makevars  POTFILES.in  calaos.pot  de.po  en.po  es.po  fr.po  getstring.pl  hi.po  nb.po  pl.po  ru.po  translate.php  update_translation.sh
scripts/: create_iodoc  lib.sh
scripts/linux/: install.sh  script.sh
scripts/osx/: after_success.sh  install.sh  script.sh
src/: Makefile.am  Makefile.in
src/lib/: CThread.cpp  CThread.h  CalaosModule.h  CalaosNetwork.cpp  CalaosNetwork.h  Calendar.cpp  Calendar.h  ColorUtils.cpp  ColorUtils.h  DownloadManager.cpp  DownloadManager.h  EcoreFdHandler.cpp  EcoreFdHandler.h  EcoreTimer.cpp  EcoreTimer.h  EinaLog.cpp  EinaLog.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  FakeLogging.h  FileDownloader.cpp  FileDownloader.h  FileUtils.cpp  FileUtils.h  Firmwares.cpp  Firmwares.h  IPC.cpp  IPC.h  Jansson_Addition.h  Jeelink.c  Jeelink.h  Json_Addition.h  Logger.cpp  Logger.h  Makefile.am  Makefile.am.orig  Makefile.in  Mutex.cpp  Mutex.h  NTPClock.cpp  (+41 more)
src/lib/LuaScript/: Lunar.h  ScriptBindings.cpp  ScriptBindings.h  ScriptManager.cpp  ScriptManager.h
src/lib/TinyXML/: node_set.cpp  tinyxml.h  tinyxmlparser.cpp  xpath_expression.cpp  xpath_expression.h  xpath_processor.cpp  xpath_stream.h  xpath_syntax.cpp
src/lib/cJSON/: cJSON.c  cJSON.h
src/lib/calaos-python/: Makefile.am  README.md  setup.py
src/lib/calaos-python/calaos_extern_proc/: __init__.py  extern_proc.py  logger.py  message.py
src/lib/exprtk/: exprtk.hpp  exprtk_functional_test.txt
src/lib/http-parser/: http_parser.c  http_parser.h
src/lib/kashmir/: devrand.h  devrandom.h  uuid.h
src/lib/libquickmail/: ChangeLog  INSTALL.msys  License.txt  Makefile.am  README  autogen.sh  config.h.in  configure.ac  doxygen_dev.cfg  libquickmail.workspace  libquickmail_shared.cbp  libquickmail_static.cbp  make_release.sh  quickmail.c  quickmail.h  quickmail_shared.cbp  quickmail_static.cbp  quickmail_static_nolib.cbp  quickmailprog.c  smtpsocket.c  smtpsocket.h  test.cbp  test_libquickmail_shared.cbp  test_libquickmail_static.cbp  test_nocurl.cbp  test_quickmail.c
src/lib/libquickmail/doc/: Doxyfile
src/lib/libquickmail/m4/: libtool.m4  ltoptions.m4
src/lib/libquickmail/man1/: quickmail.1
src/lib/sole/: README.md
src/lib/uri_parser/: hef_uri_syntax.cpp  hef_uri_syntax.h  hef_uri_syntax.txt
src/lib/uvw/src/uvw/: process.hpp  resource.hpp  udp.hpp
src/widgets/clock/: Makefile.am  module.cpp  module.h
src/widgets/note/: Makefile.am  module.cpp  module.h
tests/: ColorValue_test.cpp  ExpressionEvaluator_test.cpp  FileUtils_test.cpp  Makefile.am  WebSocketClient_test.cpp
tests/websockets/: fuzzingclient.json  run_testsuite.sh  run_testsuite_client.sh  run_testsuite_server.sh
(+8 files in other folders)
